--- a/src/main/config/secor.common.properties
+++ b/src/main/config/secor.common.properties
@@ -18,12 +18,12 @@
 ############
 
 # Regular expression matching names of consumed topics.
-secor.kafka.topic_filter=.*
+secor.kafka.topic_filter=tradelab.*
 secor.kafka.topic_blacklist=
 
 # Choose what to fill according to the service you are using
 # in the choice option you can fill S3, GS, Swift or Azure
-cloud.service=S3
+cloud.service=GS
 
 # AWS authentication credentials.
 # Leave empty if using IAM role-based authentication with s3a filesystem.
@@ -105,17 +105,17 @@ swift.api.key=
 # GS config, MUST configure if gcloud.service=GS
 
 # Name of the Google cloud storage bucket where log files are stored.
-secor.gs.bucket=secor_gs
+secor.gs.bucket=tr-work
 
 # Google cloud storage path where files are stored within the bucket.
-secor.gs.path=data
+secor.gs.path=se/data
 
 # Use direct uploads
 # WARNING: disables resumable uploads, files are uploaded in a single request
 # This may help prevent IOException: insufficient data written,
 # see https://github.com/pinterest/secor/issues/177
 # https://cloud.google.com/storage/docs/json_api/v1/how-tos/upload
-secor.gs.upload.direct=false
+secor.gs.upload.direct=true
 
 # Application credentials configuration file
 # https://developers.google.com/identity/protocols/application-default-credentials
@@ -130,7 +130,8 @@ zookeeper.sync.time.ms=200
 secor.zookeeper.path=/
 
 # Impacts how frequently the upload logic is triggered if no messages are delivered.
-kafka.consumer.timeout.ms=10000
+kafka.consumer.timeout.ms=5000 
+# 5sec
 
 # Where consumer should read from if no committed offset in zookeeper.
 #   "smallest" -> read from earliest offset
@@ -184,13 +185,15 @@ kafka.offsets.storage=zookeeper
 # Parameter which tells whether to extract Kafka message timestamp. This value is to be chose in case of 0.10.x kafka brokers.
 # Default value is false. Also specify `kafka.message.timestamp.className` as `com.pinterest.secor.timestamp.Kafka10MessageTimestamp`,
 # in case you are enabling this parameter as `true`.
-kafka.useTimestamp=false
+kafka.useTimestamp=true
+
+# HERE UP DOWN
 
 # Classname for the timestamp field you want to use. Default is `com.pinterest.secor.timestamp.Kafka10MessageTimestamp`
 # for 0.10 build profile. Basically, it will be `Kafka8MessageTimestamp` for 0.8 kafka and `Kafka10MessageTimestamp`
 # for 0.10 kafka. Fully classified names are `com.pinterest.secor.timestamp.Kafka8MessageTimestamp` and
 # `com.pinterest.secor.timestamp.Kafka10MessageTimestamp`.
-kafka.message.timestamp.className=com.pinterest.secor.timestamp.Kafka10MessageTimestamp
+kafka.message.timestamp.className=com.pinterest.secor.timestamp.Kafka8MessageTimestamp
 
 # Secor generation is a version that should be incremented during non-backwards-compatible
 # Secor releases. Generation number is one of the components of generated log file names.
@@ -198,7 +201,7 @@ kafka.message.timestamp.className=com.pinterest.secor.timestamp.Kafka10MessageTi
 secor.generation=1
 
 # Number of consumer threads per Secor process.
-secor.consumer.threads=7
+secor.consumer.threads=8
 
 # Consumption rate limit enforced at the process level (not a consumer-thread level).
 secor.messages.per.second=10000
@@ -335,13 +338,17 @@ message.timestamp.required=true
 # org.apache.hadoop.io.compress.CompressionCodec interface, such as
 # 'org.apache.hadoop.io.compress.GzipCodec'.
 secor.compression.codec=
+#org.apache.hadoop.io.compress.GzipCodec
 
 # To set a custom file extension set this to a valid file suffix, such as
 # '.gz', '.part', etc.
 secor.file.extension=
 
 # The secor file reader/writer used to read/write the data, by default we write sequence files
-secor.file.reader.writer.factory=com.pinterest.secor.io.impl.SequenceFileReaderWriterFactory
+secor.file.reader.writer.factory=com.pinterest.secor.io.impl.DelimitedTextFileReaderWriterFactory
+#SequenceFileReaderWriterFactory
+#com.pinterest.secor.io.impl.SequenceFileReaderWriterFactory
+#DelimitedTextFileReaderWriterFactory
 #if left blank defaults to \n
 secor.file.reader.Delimiter=\n
 #if left blank no Delimiter is added. do not use \ as that needs to be escaped and is an escape
@@ -351,11 +358,11 @@ secor.file.writer.Delimiter=\n
 # Max message size in bytes to retrieve via KafkaClient. This is used by ProgressMonitor and PartitionFinalizer.
 # This should be set large enough to accept the max message size configured in your kafka broker
 # Default is 0.1 MB
-secor.max.message.size.bytes=100000
+secor.max.message.size.bytes=1000000
 
 # Class that will manage uploads. Default is to use the hadoop
 # interface to S3.
-secor.upload.manager.class=com.pinterest.secor.uploader.HadoopS3UploadManager
+secor.upload.manager.class=com.pinterest.secor.uploader.GsUploadManager
 
 #Set below property to your timezone, and partitions in s3 will be created as per timezone provided
 secor.parser.timezone=UTC
@@ -415,4 +422,3 @@ parquet.validation=false
 secor.orc.message.schema.*=struct<a:int\,b:int\,c:struct<d:int\,e:string>\,f:array<string>\,g:int>
 # Below config used for defining ORC schema provider class name. User can use the custom implementation for orc schema provider
 secor.orc.schema.provider=com.pinterest.secor.util.orc.schema.DefaultORCSchemaProvider
-
